Fixed text overflow on following text on user profile v2

--- a/src/components/lists/UsersList.scss
+++ b/src/components/lists/UsersList.scss
@@ -12,7 +12,6 @@
   width: 100%;
   display: inline-block;
   margin: 20px 0px;
-  overflow: hidden;
 }
 
 .user-item-img {
@@ -28,6 +27,8 @@
   color: white;
   display: inline-block;
   text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /* Responsive */
